--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,6 +14,17 @@ blocking-dispatcher{
   throughput = 100
 }
 
+
+#zbog greske
+#akka.http.scaladsl.model.IllegalResponseException: Response reason phrase exceeds the configured limit of 64 characters
+
+akka.http.client.parsing {
+  max-response-reason-length = 512
+}
+
+
+
+
 # Kamon Metrics
 # ~~~~~~~~~~~~~~
 
